@@ -22,3 +22,5 @@ public class Main extends Application {
         launch(args);
     }
 }
+
+//--module-path /home/guesswho/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml
